samples/_failures_safe/1761043021_1129a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_287c8cd0.c: In function ‘main’:
./samples/SAFE/__tmp_287c8cd0.c:150:5: error: expected expression at end of input
  150 |     printf("Final state: %s\n",
      |     ^~~~~~
./samples/SAFE/__tmp_287c8cd0.c:150:5: error: expected declaration or statement at end of input
